# CodinGLM

./: .codinglm.json.example  .env.example  .gitignore  CODEBASE_AUDIT_PLAN.md  CODEBASE_EXPLORATION_REPORT.md  DEBUGGING_CHECKLIST.md  DOCUMENTATION_INDEX.md  GLM-4.6_MODEL_CARD.md  GLM-4.6_OPTIMIZATION_SUMMARY.md  GLM-4.6_setup.md  LICENSE  Launch CodinGLM.command  PHASE_0_COMPLETION_SUMMARY.md  PHASE_1_PROGRESS_SUMMARY.md  QUICK_REFERENCE.md  READINESS_REPORT.md  README.md  README_TUI_EXPLORATION.md  TUI_ARCHITECTURE_QUICK_REFERENCE.md  TUI_DOCUMENTATION_INDEX.md  TUI_FILE_INDEX.md  TUI_IMPLEMENTATION_ANALYSIS.md  pyproject.toml  setup.sh
audits/: AUDIT_METHODOLOGY.md  AUDIT_TRACKER.md  README.md
audits/chunks/: chunk-01-foundation-architecture.md  chunk-02-zai-integration-llm.md  chunk-03-tool-system-execution.md  chunk-04-config-policy-security.md  chunk-05-terminal-ui-interactive.md  chunk-06-noninteractive-output.md  chunk-07-testing-quality.md  chunk-08-build-packaging-deployment.md  chunk-09-services-utilities-infrastructure.md  chunk-10-extensions-ide-mcp.md
audits/findings/: FINDINGS_TEMPLATE.md
codinglm/: Tool Guide.txt  __init__.py  __main__.py  cli.py  cli_app.py  config.py  logging.py
codinglm/api/: __init__.py  client.py  models.py
docs/: CONTEXT_COMPRESSION.md  LESSONS.md  MCP_AUDIT_REPORT.md  MCP_INTEGRATION.md
gemini-cli/: .lycheeignore  CONTRIBUTING.md  Dockerfile  GEMINI.md  Makefile  README.md  ROADMAP.md  SECURITY.md  esbuild.config.js  eslint.config.js  package-lock.json  package.json  tsconfig.json
tests/: __init__.py
(+148 files in other folders)
